--- a/iSharee.html
+++ b/iSharee.html
@@ -281,7 +281,7 @@
 
 				<div class="chart-container-wrapper big">
 					<div class="chart-container">
-						<div id="slideShow" class="slideShow" style="display: block; background-color: rgb(92, 145, 127); width: 100%;">
+						<div id="slideShow" class="slideShow" style="display: block; background-color: rgba(0, 0, 0, 0); width: 100%;">
 							<p>Your image collection</p>
 
 
@@ -293,7 +293,7 @@
 					</div>
 				</div>
 
-				<div class="chart-row three">
+				<div class="chart-row three" style="display: none;">
 					<div class="chart-container-wrapper">
 						<div class="chart-container">
 							<div class="chart-info-wrapper"></div>
@@ -361,6 +361,7 @@
 
 				<div id="otherFilesList">
 					<div class="container" id="spinner"></div>
+					<div class="msg"></div>
 				</div>
 			</div>
 
@@ -403,6 +404,7 @@
 				<div id="videofileList">
 					<!-- Example spinner element -->
 						<div class="container" id="spinner"></div>
+						<div class="msg"></div>
 
 				</div>
 			</div>
@@ -490,6 +492,7 @@
 				</div>
 				<div id="docfileList">
 					<div class="container" id="spinner"></div>
+					<div class="msg"></div>
 				</div>
 			</div>
 
@@ -533,6 +536,7 @@
 				</div>
 				<div id="photosfileList">
 					<div class="container" id="spinner"></div>
+					<div class="msg"></div>
 				</div>
 			</div>
 
