--- a/iSharee.html
+++ b/iSharee.html
@@ -904,7 +904,7 @@
 	<script src="upload.js"></script>
 	<script src="res_added.js"></script>
 	<script src="stgSize.js"></script>
-	<script src="test.js"></script>
+	<script src="app.js"></script>
 
 	<script>
 		// Function to display success message
